underscore 패키지설치

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,6 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8" />
-
     <script
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=dac748f904dc2de3d49170ff73475fcc"
@@ -13,11 +12,11 @@
     <script>
       window.HTMLReactParser(/* string */);
     </script>
-
     <link
       href="https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css"
       rel="stylesheet"
     />
+    <script src="https://unpkg.com/underscore@1.13.4/underscore-esm-min.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
